--- a/showtime.cabal
+++ b/showtime.cabal
@@ -2,37 +2,30 @@ cabal-version:      2.4
 name:               showtime
 version:            0.1.0.0
 
--- A short (one-line) description of the package.
--- synopsis:
-
--- A longer description of the package.
--- description:
-
--- A URL where users can report bugs.
--- bug-reports:
-
--- The license under which the package is released.
--- license:
 author:             John Cinnamond
 maintainer:         john@cinnamond.me.uk
 
--- A copyright notice.
--- copyright:
--- category:
 extra-source-files: CHANGELOG.md
+                  , people
 
-executable showtime
-    main-is:          Main.hs
+common shared-properties
+    default-language:   Haskell2010
+    ghc-options:        -Wall -Wunused-packages -Werror
+    default-extensions: OverloadedStrings
+    build-depends:      base ^>=4.14.3.0
 
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
+library
+    import:          shared-properties
+    hs-source-dirs:  src
+    exposed-modules: Storage
+                   , Cast
+    build-depends:   text
+                   , fmt
 
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:    base ^>=4.14.3.0
-                    , random ^>= 1.2.0
-                    , text
-                    , fmt
-                    , optparse-applicative
-    hs-source-dirs:   app
-    default-language: Haskell2010
+executable showtime-exe
+    import:         shared-properties
+    main-is:        Main.hs
+    build-depends:  random ^>= 1.2.0
+                  , text
+                  , showtime
+    hs-source-dirs: app
