Remove knowledge of "Cast" types from Storage
This makes Storage agnostic of the data being stored, so long as that
data type implements the Storeable class.

This will allow me to use the Storage module to store other, non-cast
data.

--- a/showtime.cabal
+++ b/showtime.cabal
@@ -19,6 +19,7 @@ library
     hs-source-dirs:  src
     exposed-modules: Storage
                    , Cast
+                   , CastStorage
                    , AppEnv
     build-depends:   text
                    , fmt
