--- a/showtime.cabal
+++ b/showtime.cabal
@@ -11,7 +11,7 @@ extra-source-files: CHANGELOG.md
 common shared-properties
     default-language:   Haskell2010
     ghc-options:        -Wall -Wunused-packages -Werror
-    default-extensions: OverloadedStrings
+    default-extensions: OverloadedStrings, DerivingStrategies, NamedFieldPuns
     build-depends:      base ^>=4.17.0.0
 
 library
@@ -21,9 +21,13 @@ library
                    , Cast
                    , CastStorage
                    , AppEnv
+                   , Topics.Commands
+                   , Topics.Storage
+                   , Topics.Topic
     build-depends:   text
                    , fmt
                    , filepath
+                   , directory ^>=1.3.8.1
 
 executable showtime-exe
     import:         shared-properties
