--- a/showtime.cabal
+++ b/showtime.cabal
@@ -20,13 +20,14 @@ library
     exposed-modules: Storage
                    , Cast
                    , CastStorage
-                   , AppEnv
+                   , Application
                    , Topics.Commands
                    , Topics.Storage
                    , Topics.Topic
     build-depends:   text
                    , fmt
                    , filepath
+                   , transformers ^>=0.5.6.2
                    , directory ^>=1.3.8.1
 
 executable showtime-exe
@@ -35,4 +36,5 @@ executable showtime-exe
     build-depends:  random ^>= 1.2.0
                   , text
                   , showtime
+                  , transformers ^>=0.5.6.2
     hs-source-dirs: app
