--- a/showtime.cabal
+++ b/showtime.cabal
@@ -11,13 +11,17 @@ extra-source-files: CHANGELOG.md
 common shared-properties
     default-language:   Haskell2010
     ghc-options:        -Wall -Wunused-packages -Werror
-    default-extensions: OverloadedStrings, DerivingStrategies, NamedFieldPuns
+    default-extensions: OverloadedStrings 
+                      , DerivingStrategies
+                      , NamedFieldPuns
+                      , OverloadedRecordDot 
     build-depends:      base ^>=4.17.0.0
 
 library
     import:          shared-properties
     hs-source-dirs:  src
     exposed-modules: Storage
+                   , FileStorage
                    , Cast.Cast
                    , Cast.Commands
                    , Cast.Storage
@@ -39,3 +43,15 @@ executable showtime-exe
                   , showtime
                   , transformers ^>=0.5.6.2
     hs-source-dirs: app
+
+test-suite showtime-test
+    import:             shared-properties
+    type:               exitcode-stdio-1.0
+    hs-source-dirs:     test
+    main-is:            Spec.hs
+    other-modules:      HostSpec
+    build-tool-depends: hspec-discover:hspec-discover == 2.*
+    build-depends:      hspec == 2.*
+                      , showtime
+                      , transformers ^>=0.5.6.2
+                      , text
