--- a/showtime.cabal
+++ b/showtime.cabal
@@ -29,11 +29,15 @@ library
                    , Topics.Commands
                    , Topics.Storage
                    , Topics.Topic
+                   , Episodes.Commands
+                   , Episodes.Storage
+                   , Episodes.Episode
     build-depends:   text
                    , fmt
                    , filepath
                    , transformers ^>=0.5.6.2
                    , directory ^>=1.3.8.1
+                   , random ^>= 1.2.0
 
 executable showtime-exe
     import:         shared-properties
@@ -50,6 +54,7 @@ test-suite showtime-test
     hs-source-dirs:     test
     main-is:            Spec.hs
     other-modules:      HostSpec
+                      , EpisodeSpec
     build-tool-depends: hspec-discover:hspec-discover == 2.*
     build-depends:      hspec == 2.*
                       , showtime
